--- a/index.html
+++ b/index.html
@@ -86,8 +86,11 @@
     </main>
 
 
+
+    <div class="con">
+
         <aside id="new">
-            <form >
+            <form id="test" >
                 <input type="text" class="new-password-name" placeholder="Enter Password Name" required >
                 <input type="text" class="new-password-content" required minlength="10" >
                 <input type="url" class="new-password-url" placeholder="Enter Password Site url (optional)" >
@@ -98,6 +101,8 @@
                 </section>
             </form>
         </aside>
+    </div>
+
 
 
 
